add custom input, add LoginForm, LoginModal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,10 @@
 {
     "Тестовый пример": "Test example",
     "Короткий язык":"En",
-    "Длинный язык":"English"
+    "Длинный язык":"English",
+    "Главная":"Main",
+    "О сайте":"About",
+    "Войти":"Sing in",
+    "Введите логин":"Enter login",
+    "Введите пароль":"Enter password"
 }
