--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,10 @@
 {
     "Тестовый пример": "Тестовый пример",
     "Короткий язык":"Ru",
-    "Длинный язык":"Русский"
+    "Длинный язык":"Русский",
+    "Главная":"Главная",
+    "О сайте":"О сайте",
+    "Войти":"Войти",
+    "Введите логин":"Введите логин",
+    "Введите пароль":"Введите пароль"
 }
