add login feature

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
     "О сайте":"About",
     "Войти":"Sing in",
     "Введите логин":"Enter login",
-    "Введите пароль":"Enter password"
+    "Введите пароль":"Enter password",
+    "Форма авторизации":"Authorization"
 }
