--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
     "О сайте":"О сайте",
     "Войти":"Войти",
     "Введите логин":"Введите логин",
-    "Введите пароль":"Введите пароль"
+    "Введите пароль":"Введите пароль",
+    "Форма авторизации":"Форма авторизации"
 }
