--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,7 +5,19 @@
     "Главная":"Главная",
     "О сайте":"О сайте",
     "Войти":"Войти",
+    "Выйти":"Выйти",
     "Введите логин":"Введите логин",
     "Введите пароль":"Введите пароль",
-    "Форма авторизации":"Форма авторизации"
+    "Форма авторизации":"Форма авторизации",
+    "Отменить":"Отменить",
+    "Редактировать":"Редактировать",
+    "Сохранить":"Сохранить",
+    "Профиль":"Профиль",
+    "Имя":"Имя",
+    "Фамилия":"Фамилия",
+    "Возраст":"Возраст",
+    "Город":"Город",
+    "Страна":"Страна",
+    "Валюта":"Валюту",
+    "Никнэйм":"Имя пользователя"
 }
