add popover, add notifications

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,5 +18,6 @@
     "Город":"City",
     "Страна":"Country",
     "Валюта":"Currency",
-    "Никнэйм":"Username"
+    "Никнэйм":"Username",
+    "Уведомления": "Notifications"
 }
