--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -18,5 +18,6 @@
     "Город":"Город",
     "Страна":"Страна",
     "Валюта":"Валюту",
-    "Никнэйм":"Имя пользователя"
+    "Никнэйм":"Имя пользователя",
+      "Уведомления": "Уведомления"
 }
